Mapper 일부 설계, 게시판 관련 설정 설계

--- a/remind_server/src/main/resources/application.properties
+++ b/remind_server/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 #Database Configuration
 jdbc.config = database.properties
 
+#Server Port Set
+server.port=9090
+
+#JSP수정시 서버 재시작없이 바로 적용될 수 있게 설정
+server.servlet.jsp.init-parameters.development=true
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
