--- a/remind_server/build.gradle
+++ b/remind_server/build.gradle
@@ -25,7 +25,7 @@ ext {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
+    //implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-web-services'
     implementation("org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2")
