회원가입 및 로그인 후 JWT 발급 기능 추가

--- a/remind_server/src/main/resources/application.properties
+++ b/remind_server/src/main/resources/application.properties
@@ -4,4 +4,8 @@ jdbc.config = database.properties
 # Server Port Set
 server.port=9090
 
+# Mybatis Set
 mybatis.mapper-locations=classpath:mappers/*.xml
+
+# jwt Setting
+spring.jwt.secret=jwtsecretkey
