--- a/remind_frontend/package.json
+++ b/remind_frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@toast-ui/react-editor": "^3.1.3",
     "codemirror": "^5.65.2",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-js-pagination": "^3.0.3",
